cabal-version:      3.0
name:               concrete-do
version:            0.1.0.0
synopsis:           do-notation for various types, without the Monad typeclass

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Diaz
maintainer:         diaz.carrete@yahoo.es

-- A copyright notice.
-- copyright:
category:           Control
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ConcreteDo.IO
                      ConcreteDo.Either

    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite concrete-do-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    build-depends:    base ^>=4.16.1.0,
                      concrete-do
